Updated discovery system host

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8080
 
 # Eureka
 eureka.client.registerWithEureka=true
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://acme-discovery-system:8761/eureka
 
 # # Product Command Mapper
 # spring.cloud.gateway.routes[0].id=product-command
