Added rote configurations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,42 @@ server.port=8080
 eureka.client.registerWithEureka=true
 eureka.client.serviceUrl.defaultZone=http://acme-discovery-system:8761/eureka
 
-# # Product Command Mapper
-# spring.cloud.gateway.routes[0].id=product-command
-# spring.cloud.gateway.routes[0].uri=lb://product-command
-# spring.cloud.gateway.routes[0].predicates[0]=Method=POST
-# spring.cloud.gateway.routes[0].predicates[0]=Path=/products/**
+# Product Command Mapper
+spring.cloud.gateway.routes[0].id=product-command
+spring.cloud.gateway.routes[0].uri=lb://product-command
+spring.cloud.gateway.routes[0].predicates[0]=Method=POST,PUT,PATCH,DELETE
+spring.cloud.gateway.routes[0].predicates[0]=Path=/products/**
+
+# Product Query Mapper
+spring.cloud.gateway.routes[1].id=product-query
+spring.cloud.gateway.routes[1].uri=lb://product-query
+spring.cloud.gateway.routes[1].predicates[0]=Method=GET
+spring.cloud.gateway.routes[1].predicates[0]=Path=/products/**
+
+# Review Command Mapper
+spring.cloud.gateway.routes[2].id=review-command
+spring.cloud.gateway.routes[2].uri=lb://review-command
+spring.cloud.gateway.routes[2].predicates[0]=Method=POST,PUT,PATCH,DELETE
+spring.cloud.gateway.routes[2].predicates[0]=Path=/reviews/**
+spring.cloud.gateway.routes[2].predicates[1]=Method=POST
+spring.cloud.gateway.routes[2].predicates[1]=Path=/products/**/reviews
+
+# Review Query Mapper
+spring.cloud.gateway.routes[3].id=review-query
+spring.cloud.gateway.routes[3].uri=lb://review-query
+spring.cloud.gateway.routes[3].predicates[0]=Method=GET
+spring.cloud.gateway.routes[3].predicates[0]=Path=/reviews/**
+spring.cloud.gateway.routes[3].predicates[1]=Method=GET
+spring.cloud.gateway.routes[3].predicates[1]=Path=/products/**/reviews/**
+
+# Vote Command Mapper
+spring.cloud.gateway.routes[4].id=vote-command
+spring.cloud.gateway.routes[4].uri=lb://vote-command
+spring.cloud.gateway.routes[4].predicates[0]=Method=POST,PUT,PATCH,DELETE
+spring.cloud.gateway.routes[4].predicates[0]=Path=/votes/**
+
+# Vote Query Mapper
+spring.cloud.gateway.routes[5].id=vote-query
+spring.cloud.gateway.routes[5].uri=lb://vote-query
+spring.cloud.gateway.routes[5].predicates[0]=Method=GET
+spring.cloud.gateway.routes[5].predicates[0]=Path=/votes/**
