--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ eureka:
   client:
     registerWithEureka: true
     serviceUrl:
-      defaultZone: http://acme-discovery-system:8761/eureka
+      defaultZone: http://discovery-system:8761/eureka
 
 spring:
 
